I'm restarting the tests

--- a/Benjft.Util.DependencyInjection.Tests/Benjft.Util.DependencyInjection.Tests.csproj
+++ b/Benjft.Util.DependencyInjection.Tests/Benjft.Util.DependencyInjection.Tests.csproj
@@ -25,4 +25,8 @@
       <ProjectReference Include="..\Benjft.Util.DependencyInjection\Benjft.Util.DependencyInjection.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Attributes\" />
+    </ItemGroup>
+
 </Project>
